responsive on Safari service img background fixed

--- a/src/components/ResidentialServicesHead.css
+++ b/src/components/ResidentialServicesHead.css
@@ -1,10 +1,10 @@
 .residential-background img {
-	width: 10%;
 	position: relative;
 	top: 0;
 	left: 0;
 	z-index: 1;
 	background-color: white;
+	height: 100%;
 }
 
 .logoWE {
